# literate-guacamole

./: .gitignore  FCN.py  Model Loading.ipynb  read_data.py  tf_utils.py  tiff.cpp  utils.py
fcn_cc/: CMakeLists.txt  loader.cpp  tf.cpp
fcn_cc/cmake/Modules/: FindTensorFlow.cmake
